--- a/UWP/Assembly-CSharp.csproj
+++ b/UWP/Assembly-CSharp.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\CameraSystem.cs" />
+     <Compile Include="Assets\EnemyMove.cs" />
      <Compile Include="Assets\Player_Move.cs" />
      <Compile Include="Assets\PlayerDeath.cs" />
      <None Include="Assets\BayatGames\Free Platform Game Assets\Readme.txt" />
