--- a/UWP/Assembly-CSharp.csproj
+++ b/UWP/Assembly-CSharp.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
      <Compile Include="Assets\CameraSystem.cs" />
      <Compile Include="Assets\EnemyMove.cs" />
+     <Compile Include="Assets\PlatformMove.cs" />
      <Compile Include="Assets\Player_Move.cs" />
      <Compile Include="Assets\PlayerDeath.cs" />
      <None Include="Assets\BayatGames\Free Platform Game Assets\Readme.txt" />
