--- a/UWP/Assembly-CSharp.csproj
+++ b/UWP/Assembly-CSharp.csproj
@@ -56,6 +56,7 @@
      <Compile Include="Assets\PlatformMove.cs" />
      <Compile Include="Assets\Player_Move.cs" />
      <Compile Include="Assets\PlayerDeath.cs" />
+     <Compile Include="Assets\Score.cs" />
      <None Include="Assets\BayatGames\Free Platform Game Assets\Readme.txt" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
