--- a/UWP/Assembly-CSharp.csproj
+++ b/UWP/Assembly-CSharp.csproj
@@ -51,6 +51,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Background.cs" />
      <Compile Include="Assets\CameraSystem.cs" />
      <Compile Include="Assets\Data.cs" />
      <Compile Include="Assets\EnemyMove.cs" />
