--- a/UWP/Assembly-CSharp.csproj
+++ b/UWP/Assembly-CSharp.csproj
@@ -54,6 +54,7 @@
      <Compile Include="Assets\CameraSystem.cs" />
      <Compile Include="Assets\Data.cs" />
      <Compile Include="Assets\EnemyMove.cs" />
+     <Compile Include="Assets\MainMenu.cs" />
      <Compile Include="Assets\PlatformMove.cs" />
      <Compile Include="Assets\Player_Move.cs" />
      <Compile Include="Assets\PlayerDeath.cs" />
