--- a/UWP/Assembly-CSharp.csproj
+++ b/UWP/Assembly-CSharp.csproj
@@ -55,6 +55,7 @@
      <Compile Include="Assets\Data.cs" />
      <Compile Include="Assets\EnemyMove.cs" />
      <Compile Include="Assets\MainMenu.cs" />
+     <Compile Include="Assets\OptionsMenu.cs" />
      <Compile Include="Assets\PlatformMove.cs" />
      <Compile Include="Assets\Player_Move.cs" />
      <Compile Include="Assets\PlayerDeath.cs" />
