Added EndLevel script file

--- a/UWP/Assembly-CSharp.csproj
+++ b/UWP/Assembly-CSharp.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
      <Compile Include="Assets\Game\GameScripts\CameraSystem.cs" />
      <Compile Include="Assets\Game\GameScripts\Data.cs" />
+     <Compile Include="Assets\Game\GameScripts\EndLevel.cs" />
      <Compile Include="Assets\Game\GameScripts\EnemyMove.cs" />
      <Compile Include="Assets\Game\GameScripts\PlatformMove.cs" />
      <Compile Include="Assets\Game\GameScripts\Player_Move.cs" />
@@ -180,6 +181,12 @@
  <Reference Include="UnityEditor.WindowsStandalone.Extensions">
  <HintPath>C:/Program Files/Unity/Editor/Data/PlaybackEngines/windowsstandalonesupport/UnityEditor.WindowsStandalone.Extensions.dll</HintPath>
  </Reference>
+ <Reference Include="TextMeshPro-2017.3-1.0.56-Editor">
+ <HintPath>C:/Users/Jawneck/Desktop/Year 3 Semester 2/Mobile Apps Development/Project/UWP/UWP/Assets/Game/Menu/TextMesh Pro/Plugins/Editor DLL/TextMeshPro-2017.3-1.0.56-Editor.dll</HintPath>
+ </Reference>
+ <Reference Include="TextMeshPro-2017.3-1.0.56-Runtime">
+ <HintPath>C:/Users/Jawneck/Desktop/Year 3 Semester 2/Mobile Apps Development/Project/UWP/UWP/Assets/Game/Menu/TextMesh Pro/Plugins/Editor DLL/TextMeshPro-2017.3-1.0.56-Runtime.dll</HintPath>
+ </Reference>
  <Reference Include="UnityEngine.Advertisements">
  <HintPath>C:/Users/Jawneck/AppData/LocalLow/Unity/cache/packages/packages.unity.com/com.unity.ads@2.0.3/UnityEngine.Advertisements.dll</HintPath>
  </Reference>
@@ -200,12 +207,6 @@
  </Reference>
  <Reference Include="UnityEngine.StandardEvents">
  <HintPath>C:/Users/Jawneck/AppData/LocalLow/Unity/cache/packages/packages.unity.com/com.unity.standardevents@1.0.10/UnityEngine.StandardEvents.dll</HintPath>
- </Reference>
- <Reference Include="TextMeshPro-2017.3-1.0.56-Runtime">
- <HintPath>C:/Users/Jawneck/Desktop/Year 3 Semester 2/Mobile Apps Development/Project/UWP/UWP/Assets/Game/Menu/TextMesh Pro/Plugins/Editor DLL/TextMeshPro-2017.3-1.0.56-Runtime.dll</HintPath>
- </Reference>
- <Reference Include="TextMeshPro-2017.3-1.0.56-Editor">
- <HintPath>C:/Users/Jawneck/Desktop/Year 3 Semester 2/Mobile Apps Development/Project/UWP/UWP/Assets/Game/Menu/TextMesh Pro/Plugins/Editor DLL/TextMeshPro-2017.3-1.0.56-Editor.dll</HintPath>
  </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
